# assignments-3-and-later-ianmclinden

./: CMakeLists.txt  cross-compile.txt
aesd-char-driver/: aesd-circular-buffer.c
assignments/assignment7/: faulty-oops.md
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
examples/systemcalls/: systemcalls.c
examples/threading/: threading.c  threading.h
finder-app/: Makefile  finder-test.sh  finder.sh  manual-linux.sh  writer.c  writer.sh
server/: .gitignore  CMakeLists.txt  Makefile  aesdsocket-start-stop  aesdsocket.c
student-test/assignment1/: Test_validate_username.c
